--- a/less/topic.less
+++ b/less/topic.less
@@ -147,7 +147,7 @@
         }
 
 //exodo
-        min-height: 165px;
+        //min-height: 165px;
         
         @media (max-width:(@screen-sm-min)) {
             //exodo
@@ -210,6 +210,33 @@
     //exodo
         .post-wrapper {
             border: 1px solid rgba(0,0,0,0.06);
+			
+			.post-header {
+				position: relative;
+                .nickname {
+					display: inline-block;
+					.avatar-mini {
+			            @media (min-width: @screen-sm-min) {
+			                display:none;
+			            }
+					}
+                    h4 {
+						display: inline-block;
+						margin-bottom: 0px !important;
+						margin-top: 5px !important;
+						 .status {
+                            font-size: 8px;
+                        }
+                        span.username-field {
+							font-size: 15px;
+                            color: #fff;
+                            cursor: pointer;
+							font-weight: normal;
+                            word-wrap: break-word;
+                        }
+                    }
+                }
+			}
             .post-details {
                 background: none repeat scroll 0% 0% #F2F2F2;
                 float: left;
@@ -221,36 +248,19 @@
                     display: block;
                     float: left;
                     font-size: 11px;
-                    padding: 2px 12px 6px;
+                    //padding: 2px 12px 6px;
                     position: relative;
-                    width: 200px;
-                    .nickname {
-                        display: block;
-                        h3 {
-                            margin: 6px 0;
-                            .status {
-                                font-size: 8px;
-                            }
-                            span.username-field {
-                                font-size: 20px;
-                                color: @exodo-primary;
-                                cursor: pointer;
-                                word-wrap: break-word;
-                            }
-							
-                            span.username-field-mini {
-                                font-size: 20px;
-                                color: white;
-                                cursor: pointer;
-                                word-wrap: break-word;
-                            }
-                        }
-                    }
+                    width: 150px;
+                    
 					dl {
 						margin-bottom: 5px;
 					}
                     .userinfo-extra{
-	                    font-size: 10px;
+	                    font-size: 13px;
+						display:block;
+						text-align: center;
+						width: auto;
+						margin-top: 5px;
 						dt {
 						    float: left;
 						    margin-right: 10px;
@@ -262,7 +272,7 @@
                 .post-block {
                     background: none repeat scroll 0% 0% #FFF;
                     border-left: 1px solid #E4E4E4;
-                    margin-left: 200px;
+                    margin-left: 150px;
                     padding-bottom: 1em;
                 }
                 @media (max-width: (@screen-sm-min - 1px)) {
@@ -390,8 +400,8 @@
         }
         .post-header {
             background: @exodo-gradient;
-            border-left: 1px solid @exodo-primary;
-            border-right: 1px solid @exodo-secondary;
+            //border-left: 1px solid @exodo-primary;
+            //border-right: 1px solid @exodo-secondary;
             display: block;
             height: 34px;
             line-height: 23px;
@@ -429,11 +439,11 @@
         }
         .img-thumbnail {
             float: none;
-            padding: 2px;
+            //padding: 2px;
             border-radius: 0;
-            margin-bottom: 5px;
-            max-height: 150px;
-            max-width: 150px;
+            //margin-bottom: 5px;
+            min-height: 150px;
+            min-width: 150px;
         }
     }
     .posts li[data-index="0"] {
@@ -498,8 +508,61 @@
 }
 
 
-span.username-field-mini {
-    color: white;
-    cursor: pointer;
-    word-wrap: break-word;
+.ribbon-wrapper-green {
+  width: 100px;
+  height: 50px;
+  overflow: hidden;
+  position: absolute;
+  top: -3px;
+  right: -3px;
+}
+
+.ribbon-green {
+  font: bold 15px Sans-Serif;
+  text-align: center;
+  text-shadow: rgba(255,255,255,0.5) 0px 1px 0px;
+  -webkit-transform: rotate(45deg);
+  -moz-transform:    rotate(45deg);
+  -ms-transform:     rotate(45deg);
+  -o-transform:      rotate(45deg);
+  position: absolute;
+  padding: 7px 0;
+  left: 9px;
+  top: 4px;
+  width: 90px;
+  background-color: #BFDC7A;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(#BFDC7A), to(#8EBF45)); 
+  background-image: -webkit-linear-gradient(top, #BFDC7A, #8EBF45); 
+  background-image:    -moz-linear-gradient(top, #BFDC7A, #8EBF45); 
+  background-image:     -ms-linear-gradient(top, #BFDC7A, #8EBF45); 
+  background-image:      -o-linear-gradient(top, #BFDC7A, #8EBF45); 
+  color: #6a6340 !important;
+  -webkit-box-shadow: 0px 0px 3px rgba(0,0,0,0.3);
+  -moz-box-shadow:    0px 0px 3px rgba(0,0,0,0.3);
+  box-shadow:         0px 0px 3px rgba(0,0,0,0.3);
+  
+  a {
+  	text-decoration: none;
+	color: inherit;
+	}
+  a:hover{
+  	text-decoration: none;
+	color: inherit;
+  }
+}
+
+.ribbon-green:before, .ribbon-green:after {
+  content: "";
+  border-top:   3px solid #6e8900;   
+  border-left:  3px solid transparent;
+  border-right: 3px solid transparent;
+  position:absolute;
+  bottom: -3px;
+}
+
+.ribbon-green:before {
+  left: 0;
+}
+.ribbon-green:after {
+  right: 0;
 }
