--- a/less/variables.less
+++ b/less/variables.less
@@ -7,6 +7,8 @@
 //
 //## Brand colors for use across the theme.
 @exodo-primary:         	#CF246A;
+@exodo-newblack:			#323a45;
+@exodo-ribbon:	 			#e32774;
 @exodo-lightprimary:        lighten(@exodo-primary, 5%);
 @exodo-lighterprimary:      lighten(@exodo-primary, 10%);
 @exodo-secondary:       	#FF942E;
@@ -21,7 +23,7 @@
 @exodo-link-hover-color:	@exodo-primary;
 @exodo-border-color:		@exodo-lighterdark;
 
-@exodo-font-family:			"Open Sans",sans-serif;
+@exodo-font-family:			"Roboto",sans-serif;
 
 //== Category
 @exodo-category-threadinfo-size:		61%;
