--- a/less/topic.less
+++ b/less/topic.less
@@ -399,7 +399,7 @@
             display: none;
         }
         .post-header {
-            background: @exodo-gradient;
+            background: @exodo-newblack;
             //border-left: 1px solid @exodo-primary;
             //border-right: 1px solid @exodo-secondary;
             display: block;
@@ -439,8 +439,9 @@
         }
         .img-thumbnail {
             float: none;
-            //padding: 2px;
+            padding: 0px;
             border-radius: 0;
+			border: 0px solid;
             //margin-bottom: 5px;
             min-height: 150px;
             min-width: 150px;
@@ -513,30 +514,30 @@
   height: 50px;
   overflow: hidden;
   position: absolute;
-  top: -3px;
+  top: 0px;
   right: -3px;
 }
 
 .ribbon-green {
   font: bold 15px Sans-Serif;
   text-align: center;
-  text-shadow: rgba(255,255,255,0.5) 0px 1px 0px;
+  //text-shadow: rgba(255,255,255,0.5) 0px 1px 0px;
   -webkit-transform: rotate(45deg);
   -moz-transform:    rotate(45deg);
   -ms-transform:     rotate(45deg);
   -o-transform:      rotate(45deg);
   position: absolute;
-  padding: 7px 0;
-  left: 9px;
+  padding: 5px 0;
+  left: 10px;
   top: 4px;
   width: 90px;
-  background-color: #BFDC7A;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#BFDC7A), to(#8EBF45)); 
-  background-image: -webkit-linear-gradient(top, #BFDC7A, #8EBF45); 
-  background-image:    -moz-linear-gradient(top, #BFDC7A, #8EBF45); 
-  background-image:     -ms-linear-gradient(top, #BFDC7A, #8EBF45); 
-  background-image:      -o-linear-gradient(top, #BFDC7A, #8EBF45); 
-  color: #6a6340 !important;
+  background-color: @exodo-primary;
+  background-image: -webkit-gradient(linear, left top, left bottom, from(@exodo-ribbon), to(@exodo-primary)); 
+  background-image: -webkit-linear-gradient(top, @exodo-ribbon, @exodo-primary); 
+  background-image:    -moz-linear-gradient(top, @exodo-ribbon, @exodo-primary); 
+  background-image:     -ms-linear-gradient(top, @exodo-ribbon, @exodo-primary); 
+  background-image:      -o-linear-gradient(top, @exodo-ribbon, @exodo-primary); 
+  color: #fff !important;
   -webkit-box-shadow: 0px 0px 3px rgba(0,0,0,0.3);
   -moz-box-shadow:    0px 0px 3px rgba(0,0,0,0.3);
   box-shadow:         0px 0px 3px rgba(0,0,0,0.3);
@@ -550,10 +551,10 @@
 	color: inherit;
   }
 }
-
+/*
 .ribbon-green:before, .ribbon-green:after {
   content: "";
-  border-top:   3px solid #6e8900;   
+  border-top:   3px solid rgb(143, 49, 63);   
   border-left:  3px solid transparent;
   border-right: 3px solid transparent;
   position:absolute;
@@ -566,3 +567,4 @@
 .ribbon-green:after {
   right: 0;
 }
+*/
