--- a/less/variables.less
+++ b/less/variables.less
@@ -15,7 +15,8 @@
 @exodo-dark:         		#2E3539; //botones y letras small
 @exodo-lightdark:			#8D8D8D;
 @exodo-lighterdark:			#E4E4E4;
-@exodo-gradient:			linear-gradient(to right, @exodo-primary 0px, @exodo-secondary 100%) repeat scroll 0px 0px transparent;
+//@exodo-gradient:			linear-gradient(to right, @exodo-primary 0px, @exodo-secondary 100%) repeat scroll 0px 0px transparent;
+@exodo-gradient: 			@exodo-newblack;
 
 @exodo-bg-color: 			#F6F6F6; //se usa en pinneds
 @exodo-text-color:			@exodo-dark;
