--- a/less/header.less
+++ b/less/header.less
@@ -419,10 +419,10 @@
 				a {
 					display: block;
 					text-align: center;
-			padding: 0.5em 0;
-					font-weight: 600;
+					padding: 0.5em 0;
+					font-weight: normal;
 				}
-			}
+	}
 
 	#chat-list {
 		#notif-list;
