--- a/less/style.less
+++ b/less/style.less
@@ -1,6 +1,7 @@
 //este import es de exodo
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300italic,600&subset=latin,cyrillic-ext);
-@import url(https://fonts.googleapis.com/css?family=Roboto:400,300italic,600&subset=latin,cyrillic-ext);
+//@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300italic,600&subset=latin,cyrillic-ext);
+//@import url(https://fonts.googleapis.com/css?family=Roboto:400,300italic,600&subset=latin,cyrillic-ext);
+@import url(http://fonts.googleapis.com/css?family=Roboto:400,700,500,300&subset=latin,cyrillic-ext);
 
 .brand-primary {
 	color: @exodo-primary;
@@ -64,7 +65,12 @@ body {
 		
 	}
 	
-	
+	//-webkit-font-smoothing: antialiased;
+}
+
+h1, h2, h3, h4, h5, h6,
+.h1, .h2, .h3, .h4, .h5, .h6 {
+	font-weight: normal;
 }
 
 .btn {
