--- a/less/users.less
+++ b/less/users.less
@@ -2,41 +2,19 @@
 
 	&.admin {
 		#users-container {
-		padding: 0;
-	}
-
-	.users-box{
-		display: inline-block;
-		margin-top: 20px;
-		text-align: center;
-		vertical-align: top;
-			white-space: nowrap;
-			text-overflow: ellipsis;
-			overflow: hidden;
-			height: auto;
-			max-width: 125px;
-
-		img {
-			width:80px;
-			height:80px;
-		}
-
-		a {
-				margin-bottom:5px;
-		}
-	}
-		}
-	}
-
-		.users-container {
 			padding: 0;
-		
+		}
+
 		.users-box{
 			display: inline-block;
 			margin-top: 20px;
 			text-align: center;
 			vertical-align: top;
-		width: 104px;
+			white-space: nowrap;
+			text-overflow: ellipsis;
+			overflow: hidden;
+			height: auto;
+			max-width: 125px;
 
 			img {
 				width:80px;
@@ -44,12 +22,38 @@
 			}
 
 			a {
+				margin-bottom:5px;
+			}
+		}
+	}
+}
+
+.users-container {
+	padding: 0;
+	list-style-type: none;
+	li {
+		padding-bottom: 10px;
+	}
+		
+	.users-box{
+		display: inline-block;
+		margin-top: 20px;
+		text-align: center;
+		vertical-align: top;
+		width: 104px;
+
+		img {
+			width:80px;
+			height:80px;
+		}
+
+		a {
 			max-width: 94px;
 			text-overflow: ellipsis;
 			overflow: hidden;
 			white-space: nowrap;
 		}
-			}
+	}
 
 	.user-info {
 		>span {
@@ -59,5 +63,11 @@
 			white-space: nowrap;
 			display: inline-block;
 		}
+	}
+	.user-img {
+		border-radius: 50%;
+		width: 20px;
+		height: 20px;
+		vertical-align: middle;
 	}
 }
