--- a/less/chats.less
+++ b/less/chats.less
@@ -39,12 +39,11 @@
 			margin: 0;
 		}
 
-		
-	}
-	.user-img {
-		width:24px;
-		height:24px;
-		margin-left: 0.5em;
+		.user-img {
+			width:24px;
+			height:24px;
+			margin-left: 0.5em;
+		}
 	}
 }
 
@@ -71,14 +70,11 @@
 		}
 	}
 
-	.chat-content {
-		//.fix-lists;
+	ul.well {
 		height: 250px;
 		overflow-y: auto;
-		overflow-x: hidden;
 		resize: none;
 		word-wrap: break-word;
-		padding: 1rem;
 
 		li.chat-message {
 			list-style-type: none;
