--- a/less/chats.less
+++ b/less/chats.less
@@ -56,12 +56,7 @@
 			font-weight: bold;
 
 			i {
-				font-size: 14px;
-				vertical-align: center;
-
-				&.fa-keyboard-o {
-					.animation(topic-reply-pulse 2s ease-in infinite);
-				}
+				font-size: 1rem;
 			}
 		}
 
@@ -76,13 +71,10 @@
 		resize: none;
 		word-wrap: break-word;
 
-		li.chat-message {
+		li {
 			list-style-type: none;
+			margin-bottom: 10px;
 			font-weight: 300;
-
-			&[data-break="true"] {
-				margin-top: 7px;
-			}
 
 			.chat-user-image {
 				width: 20px;
@@ -98,13 +90,7 @@
 			}
 
 			.message-body {
-				margin-left: 14px;
 				clear: both;
-
-				p {
-					margin: 7px 0 0 0;
-					line-height: 2rem;
-				}
 			}
 
 			&[data-self="0"] + [data-self="0"], &[data-self="1"] + [data-self="1"] {
