--- a/less/footer.less
+++ b/less/footer.less
@@ -1,71 +1,76 @@
 #footer {
-    clear:both;
-    margin-top:14px;
-    margin-bottom:14px;
-    text-align:right;
-    display:block;
-    padding:10px 0 0 0;
-    border-bottom:1px solid @exodo-border-color;
-    color: #d8d8d8;
-    //border-top:1px solid @exodo-border-color;
-    a {
-        color: @exodo-lightdark;
-    }
-    a:hover {
-        color: @exodo-primary;
-    }
-    .footer_links {
-        li {
-            line-height:24px;
-            display:inline;
-            list-style:outside none none;
-        }
-    }
-    .footer_links.left {
-        margin-top:0;
-        float:left;
-        text-align:left;
-        padding-left:0;
-    }
+	clear:both;
+	margin-top:14px;
+	margin-bottom:14px;
+	text-align:right;
+	display:block;
+	padding:10px 0 0 0;
+	border-bottom:1px solid @exodo-border-color;
+	color: #d8d8d8;
+	//border-top:1px solid @exodo-border-color;
+	a {
+		color: @exodo-lightdark;
+	}
+	a:hover {
+		color: @exodo-primary;
+	}
+	.footer_links {
+		li {
+			line-height:24px;
+			display:inline;
+			list-style:outside none none;
+		}
+	}
+	.footer_links.left {
+		margin-top:0;
+		float:left;
+		text-align:left;
+		padding-left:0;
+	}
 }
 
 .social:hover {
-    			-webkit-transform:scale(1.1); 
--moz-transform:scale(1.1); 
--o-transform:scale(1.1); 
-			}
-			.social {
-				color:#8d8d8d;
-				-webkit-transform:scale(0.8);
-                /* Browser Variations: */
--moz-transform:scale(0.8);
--o-transform:scale(0.8); 
--webkit-transition-duration: 0.5s; 
--moz-transition-duration: 0.5s;
--o-transition-duration: 0.5s;
-			}           
+	-webkit-transform:scale(1.1); 
+	-moz-transform:scale(1.1); 
+	-o-transform:scale(1.1); 
+}
+.social {
+	color:#8d8d8d;
+	-webkit-transform:scale(0.8);
+	/* Browser Variations: */
+	-moz-transform:scale(0.8);
+	-o-transform:scale(0.8); 
+	-webkit-transition-duration: 0.5s; 
+	-moz-transition-duration: 0.5s;
+	-o-transition-duration: 0.5s;
+	
+	font-size: 2.5em !important;
+	@media (max-width: 768px){
+			font-size: 1.5em !important;
+	}
+}           
 /* 
-    Only Needed in Multi-Coloured Variation 
-                                               */
-			.social-fb:hover {
-				color: #3B5998;
-			}
-			.social-tw:hover {
-				color: #4099FF;
-			}
-			.social-gp:hover {
-				color: #d34836;
-			}
-			.social-em:hover {
-				color: #f39c12;
-			}
-			.social-ng:hover {
-				color: @exodo-dark;
-			}
+Only Needed in Multi-Coloured Variation 
+*/
+.social-fb:hover {
+	color: #3B5998;
+}
+.social-tw:hover {
+	color: #4099FF;
+}
+.social-gp:hover {
+	color: #d34836;
+}
+.social-em:hover {
+	color: #f39c12;
+}
+.social-ng:hover {
+	color: @exodo-dark;
+}
 			
-			.scrollup-ic:hover {
-				color: @exodo-primary;
-			}
+.scrollup-ic:hover {
+	color: @exodo-primary;
+}
 			
-			.scrollup {
-			}
+.scrollup {
+}
