--- a/less/footer.less
+++ b/less/footer.less
@@ -29,6 +29,10 @@
 	}
 }
 
+.center-block {
+	padding-right: 2px;
+	padding-left: 2px;
+}
 .social:hover {
 	-webkit-transform:scale(1.1); 
 	-moz-transform:scale(1.1); 
@@ -40,14 +44,16 @@
 	/* Browser Variations: */
 	-moz-transform:scale(0.8);
 	-o-transform:scale(0.8); 
-	-webkit-transition-duration: 0.5s; 
-	-moz-transition-duration: 0.5s;
-	-o-transition-duration: 0.5s;
+	-webkit-transition-duration: 0.2s; 
+	-moz-transition-duration: 0.2s;
+	-o-transition-duration: 0.2s;
 	
 	font-size: 2.5em !important;
 	@media (max-width: 768px){
 			font-size: 1.5em !important;
 	}
+	padding-right: 1px;
+	padding-left: 1px;
 }           
 /* 
 Only Needed in Multi-Coloured Variation 
