categories animation fix mozilla

--- a/less/style.less
+++ b/less/style.less
@@ -248,12 +248,12 @@ a:hover, .btn-link:hover, .btn-link:active, .btn-link:focus {
 
 #content{
 	padding: 20px 0;
-	-webkit-transition: opacity 100ms linear;
+	/*-webkit-transition: opacity 100ms linear;
 	-moz-transition: opacity 100ms linear;
 	-ms-transition: opacity 100ms linear;
 	-o-transition: opacity 100ms linear;
 	transition: opacity 100ms linear;
-
+	*/
 	&.ajaxifying {
 		-moz-opacity: 0.15;
 		opacity: 0.15;
