loading bar fix & code clean

--- a/less/header.less
+++ b/less/header.less
@@ -543,7 +543,7 @@
  	position: absolute;
  	left: 0px;
  	height: 3px;
- 	background: @exodo-gradient;
+ 	background: linear-gradient(to right, @exodo-primary 0px, @exodo-secondary 100%) repeat scroll 0px 0px transparent;
  	z-index: 10000;
  	-webkit-transition: width 0.2s ease-in;
  	-moz-transition: width 0.2s ease-in;
