pagination position, guest buttons & css fix

--- a/less/topic.less
+++ b/less/topic.less
@@ -95,7 +95,9 @@
         }
     }
 	.fixfoot {
-		bottom: 50px !important;
+		//bottom: 50px !important;
+		padding-top: 20px;
+		margin-bottom:10px;
 	}
 	
 	
@@ -189,6 +191,7 @@
     .well {
         padding-top: 10px;
         padding-bottom: 10px;
+		line-height: 38px;
     }
     
     .topic-stats {
