--- a/less/variables.less
+++ b/less/variables.less
@@ -23,7 +23,7 @@
 @exodo-link-hover-color:	@exodo-primary;
 @exodo-border-color:		@exodo-lighterdark;
 
-@exodo-font-family:			"Roboto",sans-serif;
+@exodo-font-family:			"Open Sans",sans-serif;
 
 //== Category
 @exodo-category-threadinfo-size:		61%;
