--- a/less/categories.less
+++ b/less/categories.less
@@ -321,52 +321,48 @@
 	//transition: transform 800ms 2.2s ease-out;
 }
 
-.user-badge-nav a {
+.user-badge-nav span {
 	//background-color: #50587c;
-	//color: #fff;
+	color: #fff;
 	display: inline-block;
 	outline: none;
 	text-decoration: none;
 	text-align: center;
 	float: right;
-	font-size: 10px;
-	font-weight: 400;
+	font-size: 12px;
+	font-weight: normal;
 	//user-select: none;
-	width: 40px;
+	width: auto;
 	height: 100%;
+	padding-right: 2px;
+	padding-left: 2px;
 	-webkit-tap-highlight-color:rgba(0,0,0,0);
 	//transition: background-color 350ms ease-in-out; 
 }
 
+/*
 .user-badge-nav span {
 	color: #fff;
 	vertical-align: middle;
+	padding-right: 2px;
+	padding-left: 2px;
 	//margin-right: 10px;
 }
 
-
-.user-badge-nav a:nth-child(1) {
-	//border-top: 4px solid #e64c65;
-	//background-color: #e64c65;
-	//border-radius: 0px 0px 0px 5px;
-}
-
-.user-badge-nav a:nth-child(1) span {
-	font-size: 1.2em;
-}
 
 .user-badge-nav a:nth-child(2) {
 	//background-color: #11a8ab;
 	margin-left: 1px;
 }
+*/
 
-.user-badge-nav a:nth-child(2) span {
-	font-size: 1.2em;
+
+.user-badge-nav span {
 }
 
 .icon {
 	
-	font-size: 17px;
+	font-size: 15px;
 	line-height: 17px;
 	padding: 5px;
 	color: #fff;
