--- a/less/style.less
+++ b/less/style.less
@@ -1,5 +1,6 @@
 //este import es de exodo
-@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,600&subset=latin,latin-ext);
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,600);
+//@import url(https://fonts.googleapis.com/css?family=Lato:400,700&subset=latin);
 //@import url(https://fonts.googleapis.com/css?family=Roboto:400,300italic,600&subset=latin,cyrillic-ext);
 //@import url(http://fonts.googleapis.com/css?family=Roboto:400,700,500,300&subset=latin,cyrillic-ext);
 
