--- a/less/categories.less
+++ b/less/categories.less
@@ -363,13 +363,16 @@
 .icon {
 	
 	font-size: 15px;
-	line-height: 17px;
-	padding: 5px;
+	//line-height: 17px;
+	padding: 1px 5px 3px 5px;
+	position: absolute;
+	top: 0px;
+	//padding: 5px;
 	color: #fff;
 	//border-radius: 50%;
 	margin-right: 15px;
-	min-width: 46px;
-	min-height: 55px;
+	//min-width: 46px;
+	//min-height: 55px;
 	margin-top: 0px !important;
 }
 
