categories LG MD resolution was not centered

--- a/less/categories.less
+++ b/less/categories.less
@@ -364,7 +364,7 @@
 	
 	font-size: 15px;
 	//line-height: 17px;
-	padding: 1px 5px 3px 5px;
+	padding: 4px 5px 5px 5px;
 	position: absolute;
 	top: 0px;
 	//padding: 5px;
@@ -376,3 +376,9 @@
 	margin-top: 0px !important;
 }
 
+//ajuste de home para LG
+@media (min-width: 992px){
+	.row {
+	margin-left: 0px !important;
+	}
+}
