center margin fixed on MD lG resolution, prevoius commit includes tiles on categories

--- a/less/categories.less
+++ b/less/categories.less
@@ -314,15 +314,9 @@
 	line-height: 20px;
 	width: auto;
 	height: auto;
-
-	//filter: brightness(100%);
-	//-webkit-filter: brightness(100%);
-	//transform: translate3d(0px,80px,0px);
-	//transition: transform 800ms 2.2s ease-out;
 }
 
 .user-badge-nav span {
-	//background-color: #50587c;
 	color: #fff;
 	display: inline-block;
 	outline: none;
@@ -331,30 +325,12 @@
 	float: right;
 	font-size: 12px;
 	font-weight: normal;
-	//user-select: none;
 	width: auto;
 	height: 100%;
 	padding-right: 2px;
 	padding-left: 4px;
 	-webkit-tap-highlight-color:rgba(0,0,0,0);
-	//transition: background-color 350ms ease-in-out; 
 }
-
-/*
-.user-badge-nav span {
-	color: #fff;
-	vertical-align: middle;
-	padding-right: 2px;
-	padding-left: 2px;
-	//margin-right: 10px;
-}
-
-
-.user-badge-nav a:nth-child(2) {
-	//background-color: #11a8ab;
-	margin-left: 1px;
-}
-*/
 
 
 .user-badge-nav span {
@@ -376,9 +352,13 @@
 	margin-top: 0px !important;
 }
 
-//ajuste de home para LG
+//Exodo
+//ajuste de home parte izquierda y pate central para LG y MD
 @media (min-width: 992px){
 	.row {
 	margin-left: 0px !important;
+	}
+	.tiles {
+		padding-left: 5px !important;
 	}
 }
