--- a/less/topic.less
+++ b/less/topic.less
@@ -153,7 +153,7 @@
         
         @media (max-width:(@screen-sm-min)) {
             //exodo
-            min-height: 80px;
+            //min-height: 80px;
             
             pre {
                 max-height: 250px;
@@ -174,6 +174,9 @@
         list-style-type: none;
         padding: 0;
         > li {
+			.edit-icon, .status {
+							vertical-align: -2%;
+			}
             margin-bottom: 12px;
             &.deleted {
                 -moz-opacity: 0.30;
@@ -276,7 +279,7 @@
                     background: none repeat scroll 0% 0% #FFF;
                     border-left: 1px solid #E4E4E4;
                     margin-left: 150px;
-                    padding-bottom: 1em;
+                    padding-bottom: 1em; 
                 }
                 @media (max-width: (@screen-sm-min - 1px)) {
                     .post-block {
@@ -287,9 +290,9 @@
             }
         }
         
-        .post-info, .post-block {
+        .post-block {
             position: relative;
-            padding: 10px;
+            padding: 20px;
             
             .post-signature {
                 font-size: 12px;
@@ -309,6 +312,11 @@
                 overflow: hidden;
             }
         }
+		.post-info {
+            position: relative;
+            padding: 20px;
+			font-size: 12px;
+		}
         
         //exodo
         .post-block {
