post-block XS and SM less padding

--- a/less/topic.less
+++ b/less/topic.less
@@ -293,7 +293,9 @@
         .post-block {
             position: relative;
             padding: 20px;
-            
+            @media (max-width: 768px) {
+                padding: 10px;
+            }
             .post-signature {
                 font-size: 12px;
                 border-top: 1px solid #ddd;
@@ -315,6 +317,9 @@
 		.post-info {
             position: relative;
             padding: 20px;
+            @media (max-width: 768px) {
+                padding: 10px;
+            }
 			font-size: 12px;
 		}
         
