tags bellow post-bar, darker well color, 2 commits remaining from vanilla

--- a/less/topic.less
+++ b/less/topic.less
@@ -530,7 +530,10 @@
     }
 }
 
-
+//los well de la post-bar mas oscuros
+.post-bar-well{
+	background-color: @exodo-lighterdark;
+}
 /*
 .ribbon-green:before, .ribbon-green:after {
   content: "";
