Filter plugin additions to template, center ban buttons on profile

--- a/less/topic.less
+++ b/less/topic.less
@@ -18,7 +18,7 @@
             padding: 0;
 			
         }
-		h1:first-letter {
+		h1 a span:first-letter {
 			text-transform:uppercase;
 		}
 		@media (max-width: 768px){
