user info border removed

--- a/less/topic.less
+++ b/less/topic.less
@@ -249,7 +249,7 @@
                 width: 100%;
                 .userinfo {
                     background: none repeat scroll 0% 0% #F2F2F2;
-                    border-right: 1px solid #eee;
+                    //border-right: 1px solid #eee;
                     clear: both;
                     display: block;
                     float: left;
