filter buttons fixed and better displayed, new topic on recent use button exodo

--- a/less/category.less
+++ b/less/category.less
@@ -21,7 +21,7 @@
 				.category-buttons-right{
 		            clear: right;
 		            float: left;
-		            height: 32px;
+		            height: auto;
 		            width: 100%;
 			
 				}
