advanced search button on search form nav

--- a/less/header.less
+++ b/less/header.less
@@ -544,3 +544,13 @@
 	padding-left: 5px;
 	padding-right: 5px;
 }
+
+#search-advanced{
+position: absolute;
+right: 10px;
+top: 10px;
+font-size: 1.2em;
+a {
+	color:@exodo-dark;
+}
+}
