status icon fix

--- a/less/topic.less
+++ b/less/topic.less
@@ -175,7 +175,7 @@
         padding: 0;
         > li {
 			.edit-icon, .status {
-							vertical-align: -2%;
+							//vertical-align: -2%;
 			}
             margin-bottom: 12px;
             &.deleted {
@@ -231,7 +231,8 @@
 						margin-bottom: 0px !important;
 						margin-top: 5px !important;
 						 .status {
-                            font-size: 8px;
+                            //font-size: 8px;
+							font-size: 1.2em;
                         }
                         span.username-field {
 							font-size: 15px;
@@ -434,7 +435,7 @@
 			
 			.post-header-padding{
 				
-				padding: 5px 10px;
+				padding: 5px 0px 5px 10px;
 			}
             .post-date {
                 zoom: 1;
@@ -584,4 +585,14 @@ table tr th, table tr td
     text-align:left;
     margin:0;
     padding:6px 13px;
+}
+
+
+//ajustes bordeado icono status
+
+.statusfix {
+	line-height: 20px !important;
+	width: 20px !important;;
+	height: 20px !important;;
+	font-size: 15px !important;; 
 }
