--- a/less/topic.less
+++ b/less/topic.less
@@ -153,7 +153,7 @@
         
         @media (max-width:(@screen-sm-min)) {
             //exodo
-            //min-height: 80px;
+            min-height: 50px;
             
             pre {
                 max-height: 250px;
