--- a/less/topic.less
+++ b/less/topic.less
@@ -197,10 +197,7 @@
 		line-height: 38px;
     }
     
-    .topic-stats {
-        height: 34px;
-        line-height: 34px;
-    }
+   
     
     .topic-main-buttons {
         padding-bottom: 0px;
@@ -595,4 +592,21 @@ table tr th, table tr td
 	width: 20px !important;;
 	height: 20px !important;;
 	font-size: 15px !important;; 
+}
+
+.topic-stats {
+	font-size: 16px;
+	@media (max-width: 480px){
+		font-size: 13px !important;
+	}
+	text-align: center;
+	line-height: 20px;
+}
+
+.padingtag {
+	padding-bottom: 20px;
+	text-align: center;
+}
+.tags {
+	line-height: 32px;
 }
