missing dark class

--- a/less/dark.less
+++ b/less/dark.less
@@ -416,6 +416,6 @@ span.username-field-mini {
 	color: @exodo-primary-darkmode;
 }
 
-.post-bar-well {
+.post-bar-well.dark {
 	background-color: @exodo-button-darkmode;
 }
