--- a/less/topic.less
+++ b/less/topic.less
@@ -433,6 +433,9 @@
 			.post-header-padding{
 				
 				padding: 5px 0px 5px 10px;
+				@media (max-width: 480px){
+					padding: 0px !important;
+				}
 			}
             .post-date {
                 zoom: 1;
@@ -589,9 +592,9 @@ table tr th, table tr td
 
 .statusfix {
 	line-height: 20px !important;
-	width: 20px !important;;
-	height: 20px !important;;
-	font-size: 15px !important;; 
+	width: 20px !important;
+	height: 20px !important;
+	font-size: 0.7em !important;
 }
 
 .topic-stats {
