--- a/less/style.less
+++ b/less/style.less
@@ -489,11 +489,11 @@ a:hover, .btn-link:hover, .btn-link:active, .btn-link:focus {
   
   a {
   	text-decoration: none;
-	color: inherit;
+	color: #fff;
 	}
   a:hover{
   	text-decoration: none;
-	color: inherit;
+	color: #fff;
   }
 }
 
