notification icon visible always on mobile

--- a/less/header.less
+++ b/less/header.less
@@ -554,3 +554,11 @@ a {
 	color:@exodo-dark;
 }
 }
+
+.navbar-toggle {
+	.notification-icon{
+		position: absolute;
+		left: -13px;
+		top: 14px;
+	}
+}
