reply button on left and nocolpad on postbar

--- a/less/style.less
+++ b/less/style.less
@@ -502,7 +502,6 @@ a:hover, .btn-link:hover, .btn-link:active, .btn-link:focus {
 	background-color: #f8f8f8;
 }
 
-
 @pagination-color:                     @exodo-link-color;
 @pagination-bg:                        #fff;
 @pagination-border:                    #ddd;
@@ -518,3 +517,9 @@ a:hover, .btn-link:hover, .btn-link:active, .btn-link:focus {
 @pagination-disabled-color:            @gray-light;
 @pagination-disabled-bg:               #fff;
 @pagination-disabled-border:           #ddd;
+
+
+.nocolpad {
+	padding-left: 0;
+	padding-right: 0;
+}
