--- a/less/header.less
+++ b/less/header.less
@@ -545,14 +545,10 @@
 	padding-right: 5px;
 }
 
-#search-advanced{
-position: absolute;
-right: 10px;
-top: 10px;
-font-size: 1.2em;
-a {
+
+.header #search-form .advanced-search-link {
+	margin-left: -30px;
 	color:@exodo-dark;
-}
 }
 
 .navbar-toggle {
